"Updated logo text from 'Kafh Tech' to 'Kahf Tech'"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container flex">
       <section class="main-1 flex">
         <div class="logo-img">
-          <h1>Kafh Tech</h1>
+          <h1>Kahf Tech</h1>
         </div>
         <div class="nav-1">
           <div class="flex align-item-center gap-15 cursor-pointer">
