--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <img src="avatar-1.png" alt="Avatar" class="avatar">
              </div>
             <div class="card-text">
-              <p>Neeraj Soni</p>
-              <p>neerajsoni@gmail.com</p>
+              <p>Soumay Soni</p>
+              <p>soumaysoni@gmail.com</p>
             </div>
           </div>
         </div>
